guiprojekt.client/src/globals.css
:root {
  --color-primary: #1680f9;
  --color-primary-hover: #5ea9ff;
  --color-secondary: #22572c;

  --color-bg: #324d37;
  --color-card: #212121;
  --color-card-alt: #252525;
  --color-card-hover: #333333;
  --color-card-bar: #2a2a2a;
  --color-border: #dee2e6;
  --color-text: #f8f8f8;

  --color-error: #f02929;
  --color-error-hover: #ff5959;

  --color-winner: #49A64D;
  --color-loser: #EF5252;
  --color-me: #2ba3f3;

  --font-family: 'Segoe UI', 'Open Sans', sans-serif;
  --font-h1: 1.8em;
  --font-h2: 1.5em;
  --font-body: 0.9em;
  --font-button: 0.8em;

  --border-radius: 0.4rem;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: var(--font-family);
  font-size:  var(--font-body);
  font-weight: 400;
  color: var(--color-text);
  background-color: rgb(40, 45, 46);
}

h1 {
  font-size: var(--font-h1);
  font-weight: 700;
  color: var(--color-text);
}

h2 {
  font-size: var(--font-h2);
  font-weight: 700;
  color: var(--color-text);
  margin-bottom: .75vh;
}

button {
  font-size: var(--font-button);
  font-weight: 600;
  color: white;
  background-color: var(--color-primary);
  border: none;
  border-radius: var(--border-radius);
  cursor: pointer;
  padding: 1vh 1vw;
  transition: background-color 0.15s ease;
}

button:hover {
  background-color: var(--color-primary-hover);
}

button:active {
  background-color: var(--color-primary-hover);
}

.lille-knap {
  background-color: #505050;
}

.fare {
  background-color: #505050 !important;
}

